apps/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
        - name: sonarr-nfs
          persistentVolumeClaim:
            claimName: sonarr-nfs
        - name: downloads
          persistentVolumeClaim:
            claimName: download
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:release-3.0.10.1567
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-nfs
              mountPath: /config
            - name: downloads
              mountPath: /data
