apps/sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: media
spec:
  ports:
  - name: http
    port: 8989
    protocol: TCP
  selector:
    app: sonarr
  type: ClusterIP
