apps/sonarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: sonarr
  namespace: media
spec:
  rules:
  - host: sonarr.kube.home
    http:
      paths:
      - backend:
          service:
            name: sonarr-service
            port:
              number: 8989
        path: /
        pathType: Prefix
